feat(#7): all ports — inbound use cases, outbound ports, sealed results, FraudScoringPort (#22)
Defines every hexagonal architecture contract between the domain core and the outside
world. Inbound: 5 use case interfaces + 5 self-validating command records. Outbound:
9 port interfaces + FileCategory enum + SettlementResult. Domain model: RiskLevel enum,
FraudScore (with effectiveLevel() ML-merge logic), FraudScoringContext, and 5 sealed
result interfaces (AuthorizationResult, RefundResult, ReversalResult, QRGenerationResult,
ReconciliationResult). FraudScoringPort is defined but not wired — Optional<FraudScoringPort>
in FraudEngine means ML scoring drops in post-June with zero domain changes. ArchUnit
PortsArchitectureTest enforces structural invariants at build time. 254 tests, JaCoCo ≥90%.